--- a/app/template/Layout/style.css
+++ b/app/template/Layout/style.css
@@ -92,23 +92,19 @@ body {
 #content h1 {
 	border-bottom:1px dashed #999;
 	font-size:1.8em;
-	padding:20px 0 0;
+	padding:8px 0 2px;
+	margin-bottom: 3px;
 }
 #content p {
 	padding:20px 20px 0;
 }
 
-
-
-/* footer */
-#footer {
-	border-top:2px solid #999; 
-	height:50px;
-	margin:0 auto;
-	padding:10px;
-	text-align:center;
-	width:751px;
+.corponot{
+	padding-bottom: 8px;
+	text-align: justify;
 }
+
+
 
 .lermais{
 	width: 98%;
@@ -122,6 +118,7 @@ body {
 	clear: both;
 	
 }
+
 .lermais div{
 	border: 1px double; 
 	float: right; 
@@ -152,6 +149,51 @@ td{
 #cadastro td{
 	text-align: right;
 }
+
+#equipe{
+	border-bottom: 1px solid; 
+	padding-bottom: 15px;
+}
+
+#equipe img{
+	width: 170px;
+	height: 150px;
+	border: 1;
+	float: left;
+	padding-right: 10px;
+	padding-top: 8px;
+}
+
+.comentarios{
+	border-bottom: 1px solid; 
+	padding-bottom: 15px ; 
+	margin-bottom: 10px;
+}
+
+.comentarios div{
+	border-bottom: 1px dashed;  
+	border-bottom-color: #C63;
+}
+
+.comentarios div div{
+	border: 0;
+}
+
+.avaliar{
+	border-bottom: 1px dashed; 
+	padding-bottom: 5px;
+}
+
+/* footer */
+#footer {
+	border-top:2px solid #999; 
+	height:50px;
+	margin:0 auto;
+	padding:10px;
+	text-align:center;
+	width:751px;
+}
+
 
 
 
